force-app/main/default/objects/Wecom_Notification__mdt/Wecom_Notification__mdt.object-meta.xml
<CustomObject>
    <label>Wecom Notification</label>
    <pluralLabel>Wecom Notifications</pluralLabel>
</CustomObject>