force-app/main/default/objects/Wecom_Notification__mdt/fields/Main_Message_Key__c.field-meta.xml
<CustomField>
    <fullName>Main_Message_Key__c</fullName>
    <label>Main Message Key</label>
    <length>225</length>
    <type>Text</type>
</CustomField>