force-app/main/default/objects/Wecom_Notification__mdt/fields/Param_Key__c.field-meta.xml
<CustomField>
    <fullName>Param_Key__c</fullName>
    <label>Param Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>