force-app/main/default/objects/Wecom_Notification__mdt/fields/Param_Value__c.field-meta.xml
<CustomField>
    <fullName>Param_Value__c</fullName>
    <label>Param Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>